--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head >
-<title>CPS847 A1 Index.html</title>
+<title>CPS847 A1 Index.html-conflict-</title>
 <meta charset="utf-8">
 </head>
+<p> plz conflict</p>
 <body style = "background-color:mintcream;">
 </body>
 </html>
