--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <title>CPS847 A1 Index.html-conflict-</title>
 <meta charset="utf-8">
 </head>
-<p> plz conflict</p>
+<p> plz conflict :(</p>
 <body style = "background-color:mintcream;">
 </body>
 </html>
