--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8">
 </head>
 <p> plz conflict :(</p>
+<p> Working on 19 , need to create a pull request and also found a typo</p>
 <body style = "background-color:mintcream;">
 </body>
 </html>
