add hello world text

--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,6 @@
 <p> plz conflict :(</p>
 <p> Working on 19 , need to create a pull request and also found a typo</p>
 <body style = "background-color:mintcream;">
+  <h1>hello world text</h1>
 </body>
 </html>
